[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "caesar-cipher-tool"
version = "0.1.0"
description = "Caesar Cipher encryption/decryption CLI"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
caesar = "caesar:cli"

[tool.setuptools]
py-modules = ["caesar"]
